// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> Matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 dZlatv"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 goyCQn count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount /> Updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 dZlatv"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 goyCQn count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
